(library
 (name liss)
 (public_name liszoo.liss)
 (libraries common formula menhirLib fmt))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --table --strict))

(rule
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --compile-errors %{dep:parser.messages} %{dep:parser.mly}))))
